feat: ✨ Remove daily stats & Add monthy stats
