# eroge_review_server/src/eroge_review_server/console/review_score_stats/application.py
@@ -4,12 +4,9 @@ from datetime import date, timedelta
 
 from sqlmodel import Session
 
-from eroge_review_server.common.review_score_stats.command_service import (
-    ReviewScoreStatsCommandService,
-    ReviewScoreStatsScope,
-)
+from eroge_review_server.common.review_score_stats.command_service import ReviewScoreStatsCommandService
 from eroge_review_server.common.review_score_stats.mapper import ReviewScoreStatsRepository
-from eroge_review_server.common.review_score_stats.model import ReviewScoreStatsDaily
+from eroge_review_server.common.review_score_stats.model import ReviewScoreStatsMonthly
 from eroge_review_server.common.review_score_stats.query_service import ReviewScoreStatsQueryService
 from eroge_review_server.common.utils.datetime import now
 
@@ -21,26 +18,21 @@ class ConsoleReviewScoreStatsApplication:
         self._command_service = ReviewScoreStatsCommandService(repo)
         self._session = session
 
-    def list_daily(self, *, since: date, until: date) -> list[ReviewScoreStatsDaily]:
-        return self._query_service.list_daily(since=since, until=until)
+    def list_monthly(self, *, since: date, until: date) -> list[ReviewScoreStatsMonthly]:
+        return self._query_service.list_monthly(since=since, until=until)
 
-    def run_daily_snapshot(self, *, stats_date: date | None) -> date:
-        target = stats_date or _default_stats_date_jst()
-
-        for scope in [ReviewScoreStatsScope.PUBLISHED_ALL, ReviewScoreStatsScope.PUBLISHED_90D]:
-            self._command_service.compute_and_save_daily(
-                stats_date=target,
-                scope=scope,
-            )
+    def run_monthly_snapshot(self, *, stats_month: date | None) -> date:
+        target = stats_month or _default_stats_month_jst()
+        target = target.replace(day=1)
+        self._command_service.compute_and_save_monthly(stats_month=target)
         self._session.commit()
         return target
 
 
-def _default_stats_date_jst() -> date:
-    """Pick a stable day that has already ended in JST.
+def _default_stats_month_jst() -> date:
+    """Pick the current month in JST.
 
-    This is an application-level policy for the cron endpoint.
-    Default: yesterday (JST).
+    This endpoint is intended for daily cron updates of the current month.
     """
 
-    return now().date() - timedelta(days=1)
+    return now().date().replace(day=1)
